# aoc-2020

./: Cargo.toml  README.md
src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  lib.rs  template.txt  utils.rs
src/2020/: day01.rs  day02.rs
src/day_19/: day_19_puzzle1.pest  day_19_puzzle1_sample.pest  day_19_puzzle2.pest  day_19_puzzle2_sample.pest
