[package]
name = "aoc"
version = "0.1.0"
authors = ["Matjaž Mav <matjaz.mav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/utils.rs"

[[bin]]
name = "2020-01"
path = "src/2020/day01.rs"

[dependencies]
