[package]
name = "aoc"
version = "0.1.0"
authors = ["Matjaž Mav <matjaz.mav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
itertools = "0.9.0"
regex = "1.4.2"
lazy_static = "1.4.0"
maplit = "1.0.2"
